--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+      "@emotion/react": "latest",
+      "@emotion/styled": "latest",
+      "@mui/joy": "latest",
+      "@mui/icons-material": "latest",
+      "@mui/material": "latest",
+      "@mui/colors": "latest",
+      "@types/react": "latest",
+      "@types/react-dom": "latest",
+      "react-router-dom": "latest",
+      "typescript": "latest",
   },
   "scripts": {
     "start": "react-scripts start",
