--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-      "@emotion/react": "latest",
-      "@emotion/styled": "latest",
-      "@mui/joy": "latest",
-      "@mui/icons-material": "latest",
-      "@mui/material": "latest",
-      "@mui/colors": "latest",
-      "@types/react": "latest",
-      "@types/react-dom": "latest",
-      "react-router-dom": "latest",
-      "typescript": "latest",
+    "@emotion/react": "^11.11.4",
+  "@emotion/styled": "^11.11.5",
+  
+  "@mui/icons-material": "^5.15.15",
+  "@mui/material": "^5.15.15",
+  "@types/react": "^18.0.0",
+  "@types/react-dom": "^18.0.0",
+  "react-router-dom": "^6.2.1",
+  "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "MIT"
 }
